# BTASMReleaseManager

./: Cargo.toml  README.md  constants.ts  index.html  index.tsx  package-lock.json  package.json  private.key  tauri-plugins.d.ts  tauri.conf.json  temp_key.key  vite.config.ts
.github/workflows/: release.yml
Ark Manager/: App.tsx  constants.ts  metadata.json  package.json  types.ts  vite.config.ts
Ark Manager/components/: AnalyticsDashboard.tsx  BackupManager.tsx  ClusterVisualization.tsx  Dashboard.tsx  DeleteConfirmationModal.tsx  GameSettings.tsx  Header.tsx  ImportSettingsModal.tsx  InstallProgress.tsx  InstallationWizard.tsx  MapUpdateProgressModal.tsx  ServerConfig.tsx  ServerControls.tsx  ServerInstaller.tsx  ServerManagement.tsx  SettingsModal.tsx  UnsavedChangesModal.tsx  UpdateModal.tsx  icons.tsx
Ark Manager/services/: directoryService.ts  discordService.ts  iniParsingService.ts  notificationService.ts  updaterService.ts
Ark Manager/src-tauri/: tauri.conf.json
Ark Manager/src-tauri/src/: lib.rs  main.rs
components/: CloseConfirmationModal.tsx  Console.tsx  GameSettings.tsx  Header.tsx  ModDetailsModal.tsx  ModManager.tsx  ModUpdateProgressModal.tsx  NotificationDropdown.tsx  PlayerManagement.tsx  ProfileManager.tsx  ServerConfig.tsx  ServerControls.tsx  SettingsModal.tsx  ShutdownModal.tsx  Toast.tsx  UpdateProgressModal.tsx  ui.tsx
services/: analyzeMods.ts  appSettingsService.ts  curseforgeService.ts  directoryService.ts  geminiService.ts  iniParsingService.ts
src/: main.rs
src-tauri/: tauri.conf.json
src-tauri/frontend-dist/: index.html
(+1 files in other folders)
