[package]
name = "app"
version = "0.1.0"
description = "Ark Ascended Server Manager"
authors = ["BTman"]
license = ""
repository = ""
default-run = "app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-http = "2.0.0-beta"
tauri-plugin-autostart = "2.0.0-beta"
tauri-plugin-notification = "2.0.0-beta" 


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12"
futures-util = "0.3"
walkdir = "2.5.0"
chrono = "0.4.38"
regex = "1.10.5"
pelite = "0.10"
sysinfo = "0.30.12"
local-ip-address = "0.6.5"
zip = "2.1.3"
tokio-util = "0.7"
tokio = { version = "1.38.0", features = ["full"] }
rercon = "1.2.0"
once_cell = "1.21.3"
tauri-plugin-process = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
